--- a/views/add_user.ejs
+++ b/views/add_user.ejs
@@ -1,3 +1,8 @@
 <!-- include header -->
 <%- include('include/_header') %>
 <!-- /include header -->
+
+  <!-- Main Site -->
+  <main id="site-main">
+     <div class="container">
+         <div class="box-nav d-flex justify-between">
