--- a/views/add_user.ejs
+++ b/views/add_user.ejs
@@ -6,3 +6,8 @@
   <main id="site-main">
      <div class="container">
          <div class="box-nav d-flex justify-between">
+
+          <div class="filter">
+               <a href="/"><i class="fas fa-angle-double-left"></i> All Users</a>
+           </div>
+        </div>
