--- a/views/add_user.ejs
+++ b/views/add_user.ejs
@@ -11,3 +11,8 @@
                <a href="/"><i class="fas fa-angle-double-left"></i> All Users</a>
            </div>
         </div>
+
+        <div class="form-title text-center">
+          <h2 class="text-dark">New User</h2>
+          <span class="text-light">Use the below form to create a new account</span>
+      </div>
