--- a/views/add_user.ejs
+++ b/views/add_user.ejs
@@ -16,3 +16,10 @@
           <h2 class="text-dark">New User</h2>
           <span class="text-light">Use the below form to create a new account</span>
       </div>
+
+             <!-- add user form -->
+             <%- include('include/_form') %>
+       
+          </div>
+      </main>
+      <!-- /Main Site -->
