lastly the footer

--- a/views/add_user.ejs
+++ b/views/add_user.ejs
@@ -23,3 +23,7 @@
           </div>
       </main>
       <!-- /Main Site -->
+
+      <!-- include footer -->
+<%- include('include/_footer') %>
+<!-- /include footer -->
