--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,3 +12,16 @@
                     <span class="text-gradient">New User <i class="fas fa-user"></i></span>
                 </a>
             </div>
+    <!-- form handling -->
+    <form action="/" method="POST">
+     <table class="table">
+         <thead class="thead-dark">
+             <tr>
+                 <th>ID</th>
+                 <th>Name</th>
+                 <th>@Email</th>
+                 <th>Gender</th>
+                 <th>Status</th>
+                 <th>Action</th>
+             </tr>
+         </thead>
