--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,3 +25,11 @@
                  <th>Action</th>
              </tr>
          </thead>
+         <tbody>
+          <%- include('include/_show') %>
+      </tbody>
+  </table>
+</form>
+</div>
+</main>
+<!-- /Main Site -->
