--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -28,3 +28,14 @@
           <label for="Email" class="text-light">Email</label>
           <input type="text" name="email" value="<%= user.email%>" placeholder="example@gmail.com">
       </div>
+      <div class="form-group">
+          <label for="gender" class="text-light">Gender</label>
+          <div class="radio inline">
+              <input type="radio" id="radio-2" name="gender" value="Male" <%= user.gender == 'Male' ? 'checked' : '' %>>
+              <label for="radio-2" class="radio-label">Male</label>
+          </div>
+          <div class="radio inline">
+              <input type="radio" id="radio-3" name="gender" value="Female"  <%= user.gender == 'Female' ? 'checked' : '' %> >
+              <label for="radio-3" class="radio-label">Female</label>
+          </div>
+      </div>
