--- a/views/include/_show.ejs
+++ b/views/include/_show.ejs
@@ -6,3 +6,12 @@
          <td><%= users[i].gender %></td>
          <td><%= users[i].status %></td>
          <td>
+          <a href="/update-user?id=<%= users[i]._id%>" class="btn border-shadow update">
+               <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
+           </a>
+           <a class="btn border-shadow delete" data-id=<%= users[i]._id%> >
+               <span class="text-gradient"><i class="fas fa-times"></i></span>
+           </a>
+       </td>
+   </tr>
+   <% } %>
