--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -9,3 +9,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+        <!-- Header -->
+        <header id="header">
+          <nav>
+              <div class="container">
+                  <div class="text-center">
+                      <a href="/" class="nav-brand text-dark">User Management System</a>
+                  </div>
+              </div>
+          </nav>
+      </header>
+  <!-- /Header -->
