--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -10,3 +10,14 @@
              <label for="Email" class="text-light">Email</label>
              <input type="text" name="email" value="" placeholder="example@gmail.com">
          </div>
+         <div class="form-group">
+          <label for="gender" class="text-light">Gender</label>
+          <div class="radio inline">
+              <input type="radio" id="radio-2" name="gender" value="Male" >
+              <label for="radio-2" class="radio-label">Male</label>
+          </div>
+          <div class="radio inline">
+              <input type="radio" id="radio-3" name="gender" value="Female" >
+              <label for="radio-3" class="radio-label">Female</label>
+          </div>
+      </div>
