--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -21,3 +21,21 @@
               <label for="radio-3" class="radio-label">Female</label>
           </div>
       </div>
+      <div class="form-group">
+          <label for="gender" class="text-light">Status</label>
+          <div class="radio inline">
+              <input type="radio" id="radio-4" name="status" value="Active" >
+              <label for="radio-4" class="radio-label">Active</label>
+          </div>
+          <div class="radio inline">
+              <input type="radio" id="radio-5" name="status" value="Inactive" >
+              <label for="radio-5" class="radio-label">Inactive</label>
+          </div>
+      </div>
+
+      <div class="form-group">
+          <button type="submit" class="btn text-dark update">Save</button>
+      </div>
+
+  </div>
+</form>
